create UT for controller validation
